2005-08-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Configure.pm: Mirror choosing improvements:
		- Really default to the second option when the current one is obsolete
		- Actually print all mirrors on the continent when the user asked for it
		- Sort by country name rather than by country code (eg: de -> Germany)
		- Don't show mirrors twice.

2005-08-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Don't just promise to remove on-disk cache in 'index --full',
	actually do it.
	* Package.pm, PkgVersion.pm: Don't allow user to interrupt when Storable
	is loading part of the DB, to eliminate spurious warnings about corruption.
	* Package.pm, PkgVersion.pm: Remove dead code related to merging PkgVersions
	into the DB. Make new merge method to merge trees.
	* PkgVersion.pm: Add new methods to examine trees, also store trees in
	index.db.
	* Engine.pm: Use new in_tree method in list. Add 'trees' item to dumpinfo.
	
	*** DB FORMAT CHANGE, YOU WILL NEED A FULL REINDEX ***

2005-08-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Bootstrap.pm, Engine.pm, Package.pm, SelfUpdate.pm: Remove unneeded
	references to Shlibs.
	* PkgVersion.pm: Remove unused method for getting Depends from deb, a more
	general solution for all pkglists is needed, see bug #1249916.
	* PkgVersion.pm: When dpkg status changes, invalidate Shlibs.
	* PkgVersion.pm: Cleanup of Shlibs getting.
	* Shlibs.pm: Don't use a DB, since it the shlibs list needs to be
	regenerated so often (every time a package is installed or removed!).
	Instead re-generate on demand, like Fink::Status.
	* Shlibs.pm: Remove random autoflush until somebody tells me what it's for,
	or it's documented.

2005-08-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Abstract out invalidating caches when dpkg state changes.
	* Engine.pm: Remove redundant invalidate calls.

2005-08-26  Dave Vasilevsky  <vasi@users.sourceforge.net>
