@@ -1,3 +1,12 @@
+2005-08-29  Dave Vasilevsky  <vasi@users.sourceforge.net>
+
+	* PkgVersion.pm, Engine.pm: Batch calls to fetch_deb, so it goes faster.
+	* PkgVersion.pm: Check for debs fetched via apt-get from local repos.
+		- FIXME: Should we allow UseBinaryDist for non-official repos even if
+		basepath is not /sw?
+		- FIXME: Should we check the value of is_present immediately after
+		calling fetch_deb to detect failure? Or just hope things work out?
+
 2005-08-26  Dave Vasilevsky  <vasi@users.sourceforge.net>
 
 	* Configure.pm: Mirror choosing improvements:
